--- a/css/responsa.less
+++ b/css/responsa.less
@@ -34,15 +34,23 @@ html[xmlns] .clearfix {
 .w240px{width:240px;}
 .w320px{width:320px;}
 .w480px{width:480px;}
+.w640px{width:640px;}
 .w768px{width:768px;}
 .w1024px{width:1024px;}
-
 
 .vp240{height:320px;}
 .vp320{height:240px;}
 .vp480{height:560px;}
+.vp640{height:640px;}
 .vp768{height:1024px;}
 .vp1024{height:768px;}
+
+.h320px{height:320px !important;}
+.h240px{height:240px !important;}
+.h360px{height:360px !important;}
+.h480px{height:480px !important;}
+.h1024px{height:1024px !important;}
+.h768px{height:768px !important;}
 
 .noWid{width: 100% !important;}
 .wrap{float:none !important;margin:40px auto 20px !important;}
@@ -74,7 +82,7 @@ body{
 }
 
 .container{
-    width:2972px;
+    width:3620px;
     a{
         text-decoration: none;
         outline: none;
@@ -131,7 +139,7 @@ body{
                     float: left;
                     margin: 0 6px 0 0;
                     font-family: @fonte;
-                    font-size:19px;
+                    font-size:17px;
                     padding-right: 8px;
                     a{
                         display: block;
@@ -151,7 +159,7 @@ body{
                 }
             }
             ul#resolutions{
-                width: 365px;
+                width: 405px;
                 margin:0;
                 li{
                     span.off{
@@ -163,7 +171,7 @@ body{
                 }
             }
             ul#options{
-                width: 225px;
+                width: 200px;
                 margin:0;
                 li{
                     span{
@@ -236,7 +244,7 @@ body{
 
             .device{
                     position:relative;
-                    height:550px;
+                    height:675px;
                     float:left;
                     margin:40px 0 20px 15px;
                     border:2px solid #000;
@@ -253,10 +261,9 @@ body{
                     padding:0 5px;
                     font-family:@fonte;
                     color:#fff;
-                    background:#282D34
                 }
                 iframe{
-                    height:550px;
+                    height:675px;
                     background:#fff;
                     border:0;
                 }                      
