--- a/css/responsa.less
+++ b/css/responsa.less
@@ -56,7 +56,7 @@ html[xmlns] .clearfix {
 .wrap{float:none !important;margin:40px auto 20px !important;}
 
 @fonte: 'Cuprum', sans-serif;
-@sprite:    "../images/sprite-responsa.png";
+@sprite:    "../images/sprite-responsa.png?23";
 @bg:    "../images/bg-top.jpg";
 
 @mLeftDefault:25px;
