--- a/css/responsa.less
+++ b/css/responsa.less
@@ -110,7 +110,15 @@ body{
                 margin:10px 0 0 @mLeftDefault;
                 background: url(@sprite) -187px -22px;
             }
-
+            h2{
+                position: absolute;
+                top:-9px;
+                left:-9px;
+                width: 1px;
+                height: 1px;
+                overflow: hidden;
+                text-indent: -999px;
+            }
             #likeFb{position:absolute;top:20px;left:860px;width:100px;height:30px;}
         }
         form{
