compressao de imagens

--- a/css/responsa.less
+++ b/css/responsa.less
@@ -56,7 +56,7 @@ html[xmlns] .clearfix {
 .wrap{float:none !important;margin:40px auto 20px !important;}
 
 @fonte: 'Cuprum', sans-serif;
-@sprite:    "../images/sprite-responsa.png?23";
+@sprite:    "../images/sprite-responsa.png?2303";
 @bg:    "../images/bg-top.jpg";
 
 @mLeftDefault:25px;
@@ -150,7 +150,7 @@ body{
                 letter-spacing: -1px;
                 text-transform: capitalize;
                 border: 0;
-                background: url(../images/bt-ok.png);
+                background: url(@sprite) -535px -45px;
             }
         }
         nav{
