--- a/css/responsa.less
+++ b/css/responsa.less
@@ -44,6 +44,7 @@ html[xmlns] .clearfix {
 .vp640{height:640px;}
 .vp768{height:1024px;}
 .vp1024{height:768px;}
+.vp1280{height:1024px;}
 
 .h320px{height:320px !important;}
 .h480px{height:480px !important;}
@@ -51,6 +52,7 @@ html[xmlns] .clearfix {
 .h1136px{height:1136px !important;}
 .h768px{height:768px !important;}
 .h1024px{height:1024px !important;}
+.h1280px{height:1280px !important;}
 
 .noWid{width: 100% !important;}
 .wrap{float:none !important;margin:40px auto 20px !important;}
@@ -77,12 +79,8 @@ html[xmlns] .clearfix {
 .color4{background-color:@color4;}
 .color5{background-image:url(@color5);}
 
-body{    
-
-}
-
 .container{
-    width:3620px;
+    width:4700px;
     a{
         text-decoration: none;
         outline: none;
