Inclusão banner site parceiro

--- a/css/main.css
+++ b/css/main.css
@@ -92,33 +92,8 @@ body {
     color: white;
 }
 
-
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* ==========================================================================
-   Media Queries
-   ========================================================================== */
-
-
-
-
-
-/* ==========================================================================
-   Print styles
-   ========================================================================== */
+.banner{
+  position: absolute;
+  top: 10px;
+  left: 375px;
+}
